--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,9 +9,9 @@ services:
         # Update 'VARIANT' to pick a version of Python: 3, 3.10, 3.9, 3.8, 3.7, 3.6
         # Append -bullseye or -buster to pin to an OS version.
         # Use -bullseye variants on local arm64/Apple Silicon.
-        VARIANT: "3.8"
+        VARIANT: "3.10-bullseye"
         # Optional Node.js version to install
-        NODE_VERSION: "16"
+        NODE_VERSION: "12"
     environment:
       DB_DRIVER: "postgresql"
       DB_USER: "admin"
